# FieldOpt-Research-Open

./: .gitignore  .gitmodules  COMPILING.md  README.html  README.md
FieldOpt/ERTWrapper/: CMakeLists.txt  eclgridreader.cpp  eclgridreader.h  eclsummaryreader.cpp  eclsummaryreader.h  ertwrapper_exceptions.h
FieldOpt/ERTWrapper/tests/: test_eclgridreader.cpp  test_eclsummaryreader.cpp
FieldOpt/Optimization/: .gitignore  CMakeLists.txt  Sources.cmake  case.cpp  case.h  case_handler.cpp  case_handler.h  case_transfer_object.cpp  case_transfer_object.h  hybrid_optimizer.cpp  hybrid_optimizer.h  optimization_exceptions.h  optimizer.cpp  optimizer.h
FieldOpt/Optimization/constraints/: bhp_constraint.cpp  bhp_constraint.h  combined_spline_length_interwell_distance_reservoir_boundary.cpp  constraint.cpp  constraint.h  constraint_handler.cpp  constraint_handler.h  icv_constraint.cpp  icv_constraint.h  interw_dist.cpp  interw_dist.h  mx_spline_length_interw_dist.cpp  mx_spline_length_interw_dist.h  mx_spline_length_interw_dist_res_bound.cpp  mx_spline_length_interw_dist_res_bound.h  packer_constraint.cpp  packer_constraint.h  polar_azimuth.cpp  polar_azimuth.h  polar_elevation.cpp  polar_elevation.h  polar_spline_boundary.cpp  polar_spline_boundary.h  polar_well_length.cpp  polar_well_length.h  polar_xyz_boundary.cpp  polar_xyz_boundary.h  pseudo_cont_boundary_2d.cpp  pseudo_cont_boundary_2d.h  rate_constraint.cpp  rate_constraint.h  reservoir_boundary.cpp  reservoir_boundary.h  reservoir_boundary_toe.cpp  reservoir_boundary_toe.h  reservoir_xyz_boundary.cpp  reservoir_xyz_boundary.h  well_spline_constraint.cpp  well_spline_constraint.h  well_spline_length.cpp  (+1 more)
FieldOpt/Optimization/objective/: NPV.cpp  NPV.h  augmented.cpp  augmented.h  objective.cpp  objective.h  weightedsum.cpp  weightedsum.h
FieldOpt/Optimization/optimizers/: APPS.cpp  APPS.h  CMA_ES.cpp  CMA_ES.h  ExhaustiveSearch2DVert.cpp  ExhaustiveSearch2DVert.h  GSS.cpp  GSS.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  PSO.cpp  PSO.h  RGARDD.cpp  RGARDD.h  SPSA.cpp  SPSA.h  VFSA.cpp  VFSA.h  compass_search.cpp  compass_search.h  ensemble_exp_value.cpp  ensemble_exp_value.h
FieldOpt/Optimization/optimizers/bayesian_optimization/: AcquisitionFunction.cpp  EGO.cpp  EGO.h
FieldOpt/Optimization/optimizers/bayesian_optimization/af_optimizers/: AFPSO.cpp  AFPSO.h
FieldOpt/Optimization/optimizers/dftr/: DFTR.cpp  DFTR.h  TRBuild.cpp  TRCheck.cpp  TRDebug.cpp  TRDebug.h  TRFrame.cpp  TRFrame.h  TRPolys.cpp  TRSolve.cpp
FieldOpt/Optimization/optimizers/sqp_snopt/: SQP_SNOPT.cpp  SQP_SNOPT.h
FieldOpt/Optimization/optimizers/trust_region/: TrustRegionMath.cpp  TrustRegionMath.h  TrustRegionModel.cpp  TrustRegionModel.h  TrustRegionOptimization.cpp  TrustRegionOptimization.h
FieldOpt/Optimization/solvers/: SNOPTSolver.cpp  SNOPTSolver.h
FieldOpt/Optimization/tests/: test_case.cpp  test_case_handler.cpp  test_case_transfer_object.cpp  test_resource_cases.h  test_resource_optimizer.h  test_resource_test_functions.h
FieldOpt/Optimization/tests/constraints/: test_bhp_constraint.cpp  test_constraint_handler.cpp  test_interwell_distance.cpp  test_pseudo_cont_boundary_2d.cpp  test_rate_constraint.cpp  test_reservoir_boundary.cpp  test_spline_well_length.cpp
FieldOpt/Optimization/tests/objective/: test_augmented.cpp  test_weightedsum.cpp
FieldOpt/Optimization/tests/optimizers/: test_apps.cpp  test_cma_es.cpp  test_compass_search.cpp  test_dftr.cpp  test_ego.cpp  test_en-tr-dfo.cpp  test_ga.cpp  test_pso.cpp  test_spsa.cpp  test_tr-dfo.cpp  test_tr-dfo_exp-value.cpp  test_tr-model-data.hpp  test_tr-support.hpp  test_vfsa.cpp
FieldOpt/Settings/: CMakeLists.txt  Sources.cmake  drilling.cpp  drilling.h  ensemble.cpp  ensemble.h  global.cpp  global.h  helpers.hpp  model.cpp  model.h  optimizer.cpp  optimizer.h  paths.cpp  paths.h  settings.cpp  settings.h  settings_exceptions.h  simulator.cpp  simulator.h  trajectory_importer.cpp  trajectory_importer.h
FieldOpt/Settings/model/: model__01_read_well.cpp  model__01_read_well.pcpp  model__02_read_comp.cpp
FieldOpt/Settings/tests/: test_resource_example_file_paths.hpp  test_resource_settings.hpp  test_settings.cpp  test_settings_model.cpp  test_settings_optimizer.cpp  test_settings_simulator.cpp  test_trajectory_importer.cpp
FieldOpt/Settings/tests/driver/: driver.json  driver_hybridopt.json  driver_sane.json
FieldOpt/Simulation/: CMakeLists.txt  Sources.cmake
FieldOpt/Simulation/execution_scripts/: FO_POSTSIM.sh  FO_PRESIM.sh  bash_e300_slbs.sh  bash_ecl.sh  bash_ecl_mb.sh  execution_scripts.h
FieldOpt/Simulation/results/: adgprsresults.cpp  adgprsresults.h  eclresults.cpp  eclresults.h  json_results.cpp  json_results.h  results.h  results_exceptions.h
FieldOpt/Simulation/simulator_interfaces/: adgprssimulator.cpp  adgprssimulator.h  eclsimulator.cpp  eclsimulator.h  flowsimulator.cpp  flowsimulator.h  ix_simulator.cpp  ix_simulator.h  simulator.cpp  simulator.h  simulator_exceptions.h
FieldOpt/Simulation/simulator_interfaces/driver_file_writers/: adgprsdriverfilewriter.cpp  adgprsdriverfilewriter.h  ecldriverfilewriter.cpp  ecldriverfilewriter.h  flowdriverfilewriter.cpp  flowdriverfilewriter.h  ix_driver_file_writer.cpp  ix_driver_file_writer.h
FieldOpt/Simulation/simulator_interfaces/driver_file_writers/driver_parts/: driverpart.cpp  driverpart.h
FieldOpt/Simulation/simulator_interfaces/driver_file_writers/driver_parts/adgprs_driver_parts/: adgprs_wellcontrols.cpp  adgprs_wellcontrols.h
FieldOpt/Simulation/simulator_interfaces/driver_file_writers/driver_parts/ecl_driver_parts/: actionx.hpp  compdat.cpp  compdat.h  compsegs.cpp  (+15 more)
FieldOpt/Simulation/tests/: test_resource_results.h
FieldOpt/Simulation/tests/results/: test_adgprsresults.cpp  test_eclresults.cpp  test_olympr37_data.hpp  test_olympr37_data_ext.hpp
FieldOpt/Simulation/tests/simulator_interfaces/: test_adgprssimulator.cpp  test_eclsimulator.cpp  test_ix_simulator.cpp
FieldOpt/Simulation/tests/simulator_interfaces/driver_file_writers/: adgprs_driver_file_writer.cpp  flow_driver_file_writer.cpp
(+314 files in other folders)
